@@ -1,14 +1,11 @@
 # ldconfig must be executable even when the libc is not configured, and
 # thus must be linked statically
-libc-bin: statically-linked-binary sbin/ldconfig.real
+libc-bin: statically-linked-binary sbin/ldconfig
 
 # pt_chown must be setuid root and in /usr/lib, otherwise non-root users
 # won't be able to login
 libc-bin: setuid-binary usr/lib/pt_chown 4755 root/root
 libc-bin: sharedobject-in-library-directory-missing-soname usr/lib/pt_chown
-
-# ldconfig.real doesn't have a manpage, since it's just ldconfig renamed
-libc-bin: binary-without-manpage sbin/ldconfig.real
 
 # these manpages have been moved to the manpages package
 libc-bin: binary-without-manpage sbin/ldconfig
