@@ -13,8 +13,6 @@ if [ "$1" = "configure" ] && [ "$2" = "" ] ; then
 fi
 
 if [ "$1" = "triggered" ]; then
-  LDCONFIG_NOTRIGGER=y
-  export LDCONFIG_NOTRIGGER
   ldconfig || ldconfig --verbose
   exit 0
 fi
