@@ -59,6 +59,10 @@ glibc (2.22-0experimental2) UNRELEASED; urgency=medium
     XC-Package-Type into Package-Type.
   * debian/control.in/libc: drop conflicts on prelink (<= 0.0.20090311-1) as
     we don't support Lenny to Stretch upgrades.
+  * debian/debhelper.in/libc-bin.{postinst,lintian-overrides},
+    debian/rules.d/debhelper.mk, debian/local/sbin/ldconfig: remove ldconfig
+    wrapper as new debhelper versions use the trigger instead of an explicit
+    call to ldconfig.
 
  -- Aurelien Jarno <aurel32@debian.org>  Thu, 10 Dec 2015 23:41:13 +0100
 
